--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,52 @@
 @font-face {
     font-family: "my-font-h1";
-    src: url(fonts\HelveticaNeue-Bold.otf);
+    src: 
+    local("HelveticaNeue-Bold"), local("Helvetica Neue Bold"),
+    url(fonts\HelveticaNeue-Bold.otf) format("opentype");
     font-weight: bold;
 }
 
 @font-face {
     font-family: "my-font-h2-h3";
-    src: url(fonts\HelveticaNeue-Medium.otf);
+    src:
+    local("HelveticaNeue-Medium"),local("Helvetica Neue Medium")
+    url(fonts\HelveticaNeue-Medium.otf) format("opentype");
     font-weight: bold;
 }
 
 @font-face {
     font-family: "my-font-p";
-    src: url(fonts\HelveticaNeue-Roman.otf);
+    src: 
+    local("HelveticaNeue-Roman"), local("Helvetica Neue Roman"),
+    url(fonts\HelveticaNeue-Roman.otf) format("opentype");
     font-weight: normal;
-}
-
-:root {
-    font-size: 62.5%;
 }
 
 body {
     font-family: "my-font-p", sans-serif;
     background-color: #F6F6F4;
     color: #000000;
+    font-size: 1em;
+}
+
+h1 {
+    font-size: 2em;
+    font-family: "my-font-h1", sans-serif;
+}
+
+h2 {
+    font-size: 1.5625em;
+    font-family: "my-font-h2-h3", sans-serif;
+}
+
+h3 {
+    font-size: 1.4em;
+    font-family: "my-font-h2-h3", sans-serif;
 }
 
 header {
     background-color: #3F3F3F;
+    color: #FFFFFF;
 }
 
 .wrapper-navigation {
@@ -36,7 +55,7 @@ header {
 
 main {
     background-color: #D1CCC6;
-    padding: 2%;
+    padding: 2% 0% 2% 0%;
 }
 
 section {
@@ -46,4 +65,9 @@ section {
 
 footer {
     background-color: #3F3F3F;
+    color: #FFFFFF;
+}
+
+footer a {
+    color: #FFFFFF;
 }
