--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ main {
     margin-bottom: 50px;
 }
 
-main h2, h3 {
+main h2,
+h3 {
     text-align: left;
     padding-left: 2%;
     margin-bottom: 0;
@@ -149,7 +150,7 @@ footer a {
 .user {
     align-self: center;
     background-color: #3F3F3F;
-    padding: 2%;
+    padding: 10px;
 }
 
 .user a {
@@ -227,3 +228,74 @@ footer ul {
 .socialmedia-links span {
     font-size: 3em;
 }
+
+/*tablet setting*/
+@media screen and (min-width: 800px) and (max-width: 1199px) {
+
+    /*mainnav settings*/
+    #icon-menu {
+        display: none;
+    }
+
+    .wrapper-navigation {
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+
+    .top-nav {
+        width: 110px;
+        height: 51px;
+        display: block;
+        grid-area: 1 / 6 / 2 / 7;
+        align-self: center;
+        justify-self: end;
+    }
+
+    .main-nav {
+        display: block;
+        position: relative;
+        grid-area: 1 / 1 / 2 / 6;
+    }
+
+    .main-nav ul {
+        list-style: none;
+        text-align: left;
+        display: flex;
+        flex-direction: row;
+        padding-left: 0;
+        margin-top: 0;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 0;
+    }
+
+    .main-nav li {
+        border-bottom: none;
+        padding-right: 10px;
+    }
+
+    .main-nav li a {
+        width: 80%;
+        height: 50%;
+        color: #000000;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        float: left;
+    }
+
+    section {
+        width: 90%;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+
+    p {
+        margin: 0 auto;
+    }
+
+    section h2,
+    h3 {
+        margin-left: 13%;
+       }
+    }
