--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ h2 {
 h3 {
     font-size: 1.4em;
     font-family: "my-font-h2-h3", sans-serif;
+    text-align: center;
 }
 
 p {
@@ -71,8 +72,7 @@ main {
     margin-bottom: 50px;
 }
 
-main h2,
-h3 {
+main h2 h3 {
     text-align: left;
     padding-left: 2%;
     margin-bottom: 0;
@@ -85,6 +85,9 @@ main a {
 section {
     background-color: rgba(255, 255, 255, 0.7);
     padding: 2%;
+    display: grid;
+    width: 100%;
+    justify-content: center;
 }
 
 footer {
@@ -256,6 +259,52 @@ footer ul {
 .socialmedia-links span {
     font-size: 3em;
 }
+
+/*purple button styling*/
+.purple-button {
+    background-color: #69525E;
+    color: white;
+    padding: 30px 30px 15px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.2em;
+    min-width: 300px;
+}
+
+.main-mypages div.vertical-center div {
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    width: 300px;
+    height: 84px;
+    margin-bottom: 30px;
+}
+
+/*blue button styling*/
+.blue-button {
+    background-color: #0972C8;
+    color: white;
+    padding: 20px 30px 20px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.2em;
+    min-width: 300px;
+}
+
+/*blue button small styling*/
+.blue-button-small {
+    background-color: #0972C8;
+    color: white;
+    padding: 10px 15px 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 0.9em;
+    min-width: 100px;
+}
+
 
 /*tablet setting*/
 @media screen and (min-width: 800px) and (max-width: 1199px) {
@@ -435,10 +484,11 @@ footer ul {
         text-align: left;
     }
 
+    /*Setting main headings*/
     .heading {
-        margin: 0 auto;
-        padding: 5% 10% 0% 0%;
+        margin-top: 10ch;
         max-width: 65ch;
+        padding-left: 2%;
     }
 }
 
