--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ header {
     display: none;
 }
 
+/*Settings main*/
 main {
     background-color: #D1CCC6;
     padding: 5% 0% 5% 0%;
@@ -74,14 +75,18 @@ main {
 
 main h2 h3 {
     text-align: left;
-    padding-left: 2%;
     margin-bottom: 0;
+}
+
+main div {
+    padding-left: 2%;
 }
 
 main a {
     color: #007095;
 }
 
+/*Setting section*/
 section {
     background-color: rgba(255, 255, 255, 0.7);
     padding: 2%;
@@ -152,7 +157,7 @@ footer .footer-container {
     color: #FFFFFF;
 }
 
-/*Setting nav logon*/
+/*Settings nav logon*/
 .logon-main-nav {
     background-color: #69525E;
 }
@@ -264,6 +269,7 @@ footer ul {
 .purple-button {
     background-color: #69525E;
     color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 30px 30px 15px 30px;
     text-align: center;
     text-decoration: none;
@@ -285,6 +291,7 @@ footer ul {
 .blue-button {
     background-color: #0972C8;
     color: white;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     padding: 20px 30px 20px 30px;
     text-align: center;
     text-decoration: none;
@@ -297,11 +304,39 @@ footer ul {
 .blue-button-small {
     background-color: #0972C8;
     color: white;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     padding: 10px 15px 10px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 0.9em;
+    min-width: 100px;
+}
+
+/*purple button small styling*/
+.purple-button-small {
+    background-color: #69525E;
+    color: white;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    letter-spacing: 0.1em;
+    padding: 10px 15px 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
+    min-width: 100px;
+}
+
+/*red button small styling*/
+.red-button-small {
+    background-color: #9C0E1A;
+    color: white;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    padding: 10px 15px 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
     min-width: 100px;
 }
 
