--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,29 @@ select {
     font-size: 2em;
 }
 
+.input-text-logon {
+    display: flex;
+    align-items: center;
+    padding: 0px;
+    border: 1px solid #3A3A3A;
+    margin-right: 10px;
+    width: 80%;
+    background-color: #FFFFFF;
+    margin-bottom: 10px;
+}
+
+.logon-buttons {
+    display: flex;
+    justify-content: space-between;
+    max-width: 80%;
+    padding-left: 0px;
+}
+
+.user-logon {
+    justify-self: flex-start;
+    padding-left: 0px;
+}
+
 main input[type="date"] {
     background: #FFFFFF;
     border: 1px solid #000000;
@@ -450,8 +473,22 @@ main input[type="time"] {
     font-size: 1.2em;
 }
 
+.h2-font {
+    padding: 0;
+    margin: 0;
+    text-align: left;
+}
+
+.heading {
+    margin-top: 5ch;
+}
+
 /*tablet setting*/
 @media screen and (min-width: 800px) and (max-width: 1199px) {
+    body {
+        overflow-x: visible;
+    }
+
     .vertical-center {
         margin: 0 auto;
         max-width: 1200px;
@@ -637,6 +674,10 @@ main input[type="time"] {
 }
 
 @media screen and (min-width: 1200px) {
+    body {
+        overflow-x: visible;
+    }
+
     .vertical-center {
         margin: 0 auto;
         max-width: 1200px;
@@ -820,9 +861,10 @@ main input[type="time"] {
         text-align: left;
     }
 
+    /*Setting main headings*/
     .heading {
-        margin: 0 auto;
-        padding: 5% 10% 0% 0%;
+        margin-top: 10ch;
         max-width: 65ch;
+        padding-left: 2%;
     }
 }
