--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,20 @@ footer ul {
     min-width: 100px;
 }
 
+/*contact buttons styling*/
+.contact-buttons {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    margin: 0 auto;
+    padding-left: 0px;
+}
+
+.contact-buttons div {
+    padding-left: 0px;
+    margin-bottom: 40px;
+}
+
 /*form styling*/
 .veichle {
     box-sizing: border-box;
@@ -504,17 +518,69 @@ ul.page-links {
     grid-area: 2 / 1 / 3 / 2;
 }
 
-.contact-buttons {
+/*settings kommande resor page*/
+main.kommanderesor-page div.vertical-center div.kommande-resa {
     display: flex;
     flex-direction: column;
-    width: fit-content;
+    gap: 20px;
     margin: 0 auto;
+    width: 80%;
+    max-width: 469px;
     padding-left: 0px;
 }
 
-.contact-buttons div {
+div.confirmation-info {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 4%;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+div.confirm-date {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 1.4em;
+    padding-bottom: 10px;
     padding-left: 0px;
-    margin-bottom: 40px;
+    border-bottom: 1px solid #000000;
+}
+
+.confirm-address {
+    display: flex;
+    flex-direction: column;
+}
+
+address {
+    display: inline-block;
+    font-style: normal;
+    font-size: 1.2em;
+    margin-top: 10px;
+}
+
+.confirm-buttons {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 0px;
+}
+
+/*kommande resor canceled booking*/
+div.booking-cancel {
+    margin-bottom: 20px;
+}
+
+.trip-cancel {
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 10%;
+    text-align: center;
+    font-size: 1.6em;
+    color: white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+div.container-transparent {
+    display: grid;
 }
 
 /*tablet setting*/
