--- a/css/styles.css
+++ b/css/styles.css
@@ -41,19 +41,57 @@ h1 a {
 h2 {
     font-size: 1.5625em;
     font-family: "my-font-h2-h3", sans-serif;
-    text-align: center;
+    text-align: left;
+}
+
+section h2 {
+    margin-bottom: 0px;
+    text-align: left;
 }
 
 h3 {
     font-size: 1.4em;
     font-family: "my-font-h2-h3", sans-serif;
-    text-align: center;
+    text-align: left;
+}
+
+section h3 {
+    margin-bottom: 0px;
+}
+
+h4 {
+    font-size: 1.3em;
+    font-family: "my-font-h2-h3", sans-serif;
+    text-align: left;
+}
+
+section h4 {
+    margin-bottom: 0px;
 }
 
 p {
     padding: 5% 2% 5% 2%;
     max-width: 65ch;
     margin: 0;
+}
+
+ol.orderedlist-page {
+    list-style: none;
+    max-width: 65ch;
+    font-family: "my-font-p", sans-serif;
+    font-size: 1.2em;
+    padding: 2%;
+}
+
+ol.orderedlist-page li {
+    margin-bottom: 15px;
+}
+
+ul.unorderedlist-page {
+    max-width: 65ch;
+    font-family: "my-font-p", sans-serif;
+    font-size: 1.2em;
+    padding: 4%;
 }
 
 header {
@@ -76,13 +114,13 @@ header {
 /*Settings main*/
 main {
     background-color: #D1CCC6;
-    padding: 5% 0% 5% 0%;
+    padding: 2% 0% 5% 0%;
     margin-bottom: 50px;
 }
 
-main h2 h3 {
+main section h2 h3 {
     text-align: left;
-    margin-bottom: 0;
+    margin-bottom: 0px !important;
 }
 
 main div {
@@ -247,6 +285,7 @@ footer .footer-container {
     visibility: hidden;
     width: 0px;
     height: 0px;
+    margin: 0;
 }
 
 /*footer-navigation*/
@@ -747,6 +786,10 @@ div.container-transparent {
         text-align: center;
     }
 
+    section h2 {
+        margin-bottom: 0px;
+    }
+
     h3 {
         font-size: 1.7em;
         font-family: "my-font-h2-h3", sans-serif;
@@ -963,7 +1006,11 @@ div.container-transparent {
         font-size: 2em;
         font-family: "my-font-h2-h3", sans-serif;
         text-align: center;
-        padding: 0% 5% 0% 5%;
+    }
+
+    section h2 {
+        margin-bottom: 0px;
+        text-align: left;
     }
 
     h3 {
