--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,11 @@ main input[type="time"] {
     font-size: 1.2em;
 }
 
+.container-submit-trip {
+    display: flex;
+    justify-content: center;
+}
+
 .h2-font {
     padding: 0;
     margin: 0;
