--- a/css/styles.css
+++ b/css/styles.css
@@ -672,6 +672,24 @@ img.imgabout {
     height: auto;
 }
 
+/*quotes*/
+div.quote {
+    background-color: #686159;
+    max-width: 70%;
+    min-height: 100px;
+    color: #FFFFFF;
+    font-size: 1.2em;
+    border-radius: 10px;
+    line-height: 1.6em;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+blockquote {
+    margin: 6% 2% 2% 2%;
+}
+
 /*tablet setting*/
 @media screen and (min-width: 800px) and (max-width: 1199px) {
     body {
@@ -897,6 +915,24 @@ img.imgabout {
 
     picture.imgtwo {
         display: block;
+    }
+
+    /*quotes*/
+    div.quote {
+        background-color: #686159;
+        max-width: 40%;
+        min-height: 100px;
+        color: #FFFFFF;
+        font-size: 1.2em;
+        border-radius: 10px;
+        line-height: 1.6em;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    blockquote {
+        margin: 6% 2% 2% 2%;
     }
 }
 
@@ -1142,5 +1178,22 @@ img.imgabout {
         padding-left: 0px;
         display: flex;
         justify-content: center;
+    }
+
+    /*quotes*/
+    div.quote {
+        background-color: #686159;
+        max-width: 40%;
+        min-height: 200px;
+        color: #FFFFFF;
+        font-size: 1.8em;
+        border-radius: 10px;
+        line-height: 1.6em;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    blockquote {
     }
 }
