--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,25 @@ main input[type="time"] {
     font-size: 1.2em;
 }
 
+fieldset {
+    padding-left: 0px !important;
+    border: none;
+}
+
+fieldset div {
+    font-size: 1.4em;
+    line-height: 2em;
+}
+
+fieldset div input {
+    width: 20px;
+    height: 20px;
+}
+
+fieldset div label {
+    padding-left: 5px;
+}
+
 .container-submit-trip {
     display: flex;
     justify-content: center;
@@ -609,6 +628,11 @@ address {
     justify-content: space-between;
     padding-left: 0px;
     margin-bottom: 40px;
+}
+
+p.form-trip-other-info {
+    padding-top: 5px;
+    font-size: 1em;
 }
 
 /*kommande resor canceled booking*/
