--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,15 @@ fieldset div label {
     padding-left: 5px;
 }
 
+div.form-myprofile-ledsagare fieldset {
+    display: flex;
+    flex-direction: row;
+}
+
+div.form-myprofile-ledsagare fieldset div {
+    padding-right: 40px;
+}
+
 .container-submit-trip {
     display: flex;
     justify-content: center;
@@ -805,7 +814,7 @@ blockquote {
     }
 
     .user a {
-        font-size: 1em;
+        font-size: 0.8em;
     }
 
     .main-nav {
@@ -1162,7 +1171,7 @@ blockquote {
     .heading {
         margin-top: 10ch;
         max-width: 65ch;
-        padding-left: 2%;
+        padding-left: 0px;
     }
 
     /*Settings section fardtjanst page*/
