--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@
     font-weight: normal;
 }
 
+*:focus-visible {
+  outline: 3px solid rgb(255, 255, 255);
+  box-shadow: 0 0 0 6px rgb(0, 0, 0);
+}
+
 body {
     font-family: "my-font-p", sans-serif;
     background-color: #F6F6F4;
